# image-file-format-converter

./: .gitignore  .gitmodules  CMakeLists.txt  Dithering.cpp  Dithering.h  Helpers.h  MyImGui.cpp  MyImGui.h  Palette.cpp  Palette.h  PaletteGenerator.cpp  PaletteGenerator.h  Quantization.cpp  Quantization.h  README.md  fileManagement.cpp  fileManagement.h  imgui.ini  main.cpp  stb_image.h
